test/extern/ExternBlockClangError.good
ExternBlockClangError.chpl:1: error: running clang on extern block failed -- clang errors follow
ExternBlockClangError.chpl:3: note: error: no previous prototype for function 'bar'
ExternBlockClangError.chpl:9: note: warning: cast to smaller integer type 'int' from 'short *'
